--- a/tv-script-generation/dlnd_tv_script_generation.ipynb
+++ b/tv-script-generation/dlnd_tv_script_generation.ipynb
@@ -749,7 +749,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -758,19 +758,19 @@
    "outputs": [],
    "source": [
     "# Number of Epochs\n",
-    "num_epochs = None\n",
+    "num_epochs = 1\n",
     "# Batch Size\n",
-    "batch_size = None\n",
+    "batch_size = 128\n",
     "# RNN Size\n",
-    "rnn_size = None\n",
+    "rnn_size = 64\n",
     "# Embedding Dimension Size\n",
-    "embed_dim = None\n",
+    "embed_dim = 150\n",
     "# Sequence Length\n",
-    "seq_length = None\n",
+    "seq_length = 20\n",
     "# Learning Rate\n",
-    "learning_rate = None\n",
+    "learning_rate = 0.01\n",
     "# Show stats for every n number of batches\n",
-    "show_every_n_batches = None\n",
+    "show_every_n_batches = 1\n",
     "\n",
     "\"\"\"\n",
     "DON'T MODIFY ANYTHING IN THIS CELL THAT IS BELOW THIS LINE\n",
@@ -791,13 +791,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(?, ?, 64)\n",
+      "(?, ?, 6777)\n"
+     ]
+    }
+   ],
    "source": [
     "\"\"\"\n",
     "DON'T MODIFY ANYTHING IN THIS CELL\n",
@@ -843,13 +852,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "66560\n",
+      "Epoch   0 Batch    0/26   train_loss = 8.822\n",
+      "Epoch   0 Batch    1/26   train_loss = 8.804\n",
+      "Epoch   0 Batch    2/26   train_loss = 8.759\n",
+      "Epoch   0 Batch    3/26   train_loss = 8.733\n",
+      "Epoch   0 Batch    4/26   train_loss = 8.648\n",
+      "Epoch   0 Batch    5/26   train_loss = 8.358\n",
+      "Epoch   0 Batch    6/26   train_loss = 7.995\n",
+      "Epoch   0 Batch    7/26   train_loss = 7.547\n",
+      "Epoch   0 Batch    8/26   train_loss = 7.037\n",
+      "Epoch   0 Batch    9/26   train_loss = 6.796\n",
+      "Epoch   0 Batch   10/26   train_loss = 6.599\n",
+      "Epoch   0 Batch   11/26   train_loss = 6.465\n",
+      "Epoch   0 Batch   12/26   train_loss = 6.649\n",
+      "Epoch   0 Batch   13/26   train_loss = 6.518\n",
+      "Epoch   0 Batch   14/26   train_loss = 6.490\n",
+      "Epoch   0 Batch   15/26   train_loss = 6.479\n",
+      "Epoch   0 Batch   16/26   train_loss = 6.609\n",
+      "Epoch   0 Batch   17/26   train_loss = 6.664\n",
+      "Epoch   0 Batch   18/26   train_loss = 6.600\n",
+      "Epoch   0 Batch   19/26   train_loss = 6.603\n",
+      "Epoch   0 Batch   20/26   train_loss = 6.599\n",
+      "Epoch   0 Batch   21/26   train_loss = 6.516\n",
+      "Epoch   0 Batch   22/26   train_loss = 6.512\n",
+      "Epoch   0 Batch   23/26   train_loss = 6.680\n",
+      "Epoch   0 Batch   24/26   train_loss = 6.553\n",
+      "Epoch   0 Batch   25/26   train_loss = 6.462\n",
+      "Model Trained and Saved\n"
+     ]
+    }
+   ],
    "source": [
     "\"\"\"\n",
     "DON'T MODIFY ANYTHING IN THIS CELL\n",
