language translation -- model parameter placeholders

--- a/language-translation/dlnd_language_translation.ipynb
+++ b/language-translation/dlnd_language_translation.ipynb
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false
    },
@@ -132,8 +132,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['new jersey is sometimes quiet during autumn , and it is snowy in april .', 'the united states is usually chilly during july , and it is usually freezing in november .', 'california is usually quiet during march , and it is usually hot in june .', 'the united states is sometimes mild during june , and it is cold in september .']\n",
-      "[[15, 13, 17, 28, 23, 31, 8, 19, 16, 27, 17, 10, 5, 29, 14], [25, 12, 30, 17, 4, 22, 31, 32, 19, 16, 27, 17, 4, 18, 5, 20, 14], [6, 17, 4, 23, 31, 11, 19, 16, 27, 17, 4, 24, 5, 26, 14], [25, 12, 30, 17, 28, 7, 31, 26, 19, 16, 27, 17, 21, 5, 9, 14]]\n",
       "Tests Passed\n"
      ]
     }
@@ -149,9 +147,9 @@
     "    :return: A tuple of lists (source_id_text, target_id_text)\n",
     "    \"\"\"\n",
     "    source_sentences = source_text.split('\\n')\n",
-    "    print(source_sentences)\n",
+    "    #print(source_sentences)\n",
     "    source_id_text = [[source_vocab_to_int[word] for word in sentence.split()] for sentence in source_sentences]\n",
-    "    print(source_id_text)\n",
+    "    #print(source_id_text)\n",
     "    target_sentences = [sentence + \" <EOS>\" for sentence in target_text.split('\\n')]\n",
     "    target_id_text = [[target_vocab_to_int[word] for word in sentence.split()] for sentence in target_sentences]\n",
     "    \n",
@@ -195,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -221,11 +219,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "TensorFlow Version: 1.1.0\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Yasser Makram\\AppData\\Local\\conda\\conda\\envs\\dlnd-tf-lab\\lib\\site-packages\\ipykernel\\__main__.py:15: UserWarning: No GPU found. Please use a GPU to train your neural network.\n"
+     ]
+    }
+   ],
    "source": [
     "\"\"\"\n",
     "DON'T MODIFY ANYTHING IN THIS CELL\n",
@@ -276,11 +289,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tests Passed\n"
+     ]
+    }
+   ],
    "source": [
     "def model_inputs():\n",
     "    \"\"\"\n",
@@ -288,8 +309,17 @@
     "    :return: Tuple (input, targets, learning rate, keep probability, target sequence length,\n",
     "    max target sequence length, source sequence length)\n",
     "    \"\"\"\n",
-    "    # TODO: Implement Function\n",
-    "    return None, None, None, None, None, None, None\n",
+    "    inputs = tf.placeholder(tf.int32, [None, None], name=\"input\")\n",
+    "    targets = tf.placeholder(tf.int32, [None, None], name=\"target\")\n",
+    "\n",
+    "    learning_rate = tf.placeholder(tf.float32, name=\"learning_rate\")\n",
+    "    keep_prob = tf.placeholder(tf.float32, name=\"keep_prob\")\n",
+    "\n",
+    "    target_seq_length = tf.placeholder(tf.int32, (None,), name=\"target_sequence_length\")\n",
+    "    max_target_length = tf.reduce_max(target_seq_length, name=\"max_target_length\")\n",
+    "    source_seq_length = tf.placeholder(tf.int32, (None,), name=\"source_sequence_length\")\n",
+    "\n",
+    "    return inputs, targets, learning_rate, keep_prob, target_seq_length, max_target_length, source_seq_length\n",
     "\n",
     "\n",
     "\"\"\"\n",
