language translation -- process decoder input

--- a/language-translation/dlnd_language_translation.ipynb
+++ b/language-translation/dlnd_language_translation.ipynb
@@ -338,11 +338,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tests Passed\n"
+     ]
+    }
+   ],
    "source": [
     "def process_decoder_input(target_data, target_vocab_to_int, batch_size):\n",
     "    \"\"\"\n",
@@ -352,8 +360,9 @@
     "    :param batch_size: Batch Size\n",
     "    :return: Preprocessed target data\n",
     "    \"\"\"\n",
-    "    # TODO: Implement Function\n",
-    "    return None\n",
+    "    decoder_input = tf.strided_slice(target_data, [0,0], [batch_size, -1], [1,1])\n",
+    "    decoder_input = tf.concat([tf.fill([batch_size, 1], target_vocab_to_int['<GO>']), decoder_input], 1)\n",
+    "    return decoder_input\n",
     "\n",
     "\"\"\"\n",
     "DON'T MODIFY ANYTHING IN THIS CELL THAT IS BELOW THIS LINE\n",
