--- a/language-translation/dlnd_language_translation.ipynb
+++ b/language-translation/dlnd_language_translation.ipynb
@@ -503,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -570,12 +570,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tests Passed\n"
+     ]
+    }
+   ],
    "source": [
+    "from tensorflow.python.layers.core import Dense\n",
     "def decoding_layer(dec_input, encoder_state,\n",
     "                   target_sequence_length, max_target_sequence_length,\n",
     "                   rnn_size,\n",
@@ -596,8 +605,34 @@
     "    :param decoding_embedding_size: Decoding embedding size\n",
     "    :return: Tuple of (Training BasicDecoderOutput, Inference BasicDecoderOutput)\n",
     "    \"\"\"\n",
-    "    # TODO: Implement Function\n",
-    "    return None, None\n",
+    "    dec_embeddings = tf.Variable(tf.random_uniform([target_vocab_size, decoding_embedding_size]))\n",
+    "    embed = tf.contrib.layers.embed_sequence(dec_input, target_vocab_size, decoding_embedding_size)\n",
+    "\n",
+    "    def lstm_cell(size):\n",
+    "        cell = tf.contrib.rnn.LSTMCell(size,\n",
+    "                                       initializer=tf.random_uniform_initializer(-0.1,0.1,seed=7))\n",
+    "        dropout = tf.contrib.rnn.DropoutWrapper(cell, input_keep_prob=keep_prob, output_keep_prob=keep_prob)\n",
+    "        return dropout\n",
+    "    rnn_cell = tf.contrib.rnn.MultiRNNCell([lstm_cell(rnn_size) for _ in range(0, num_layers)])\n",
+    "\n",
+    "    #rnn_out, rnn_state = tf.nn.dynamic_rnn(rnn_cell, embed, target_sequence_length, dtype=tf.float32)\n",
+    "\n",
+    "    #dense layer\n",
+    "    output_layer = Dense(target_vocab_size, \n",
+    "                                activation=None     #linear activation\n",
+    "                                , kernel_initializer = tf.truncated_normal_initializer(mean = 0.0, stddev=0.1))\n",
+    "    with tf.variable_scope('decode'):\n",
+    "        training_decoder_out = decoding_layer_train(encoder_state, rnn_cell, embed\n",
+    "                                                    , target_sequence_length, max_target_sequence_length, output_layer, keep_prob)\n",
+    "\n",
+    "    with tf.variable_scope('decode', reuse=True):\n",
+    "        #print(dec_input.shape)\n",
+    "        inference_decoder_output = decoding_layer_infer(encoder_state, rnn_cell, dec_embeddings\n",
+    "                                                        , target_vocab_to_int['<GO>'], target_vocab_to_int['<EOS>']\n",
+    "                                                        , max_target_sequence_length, target_vocab_size, output_layer\n",
+    "                                                        , batch_size, keep_prob)\n",
+    "\n",
+    "    return training_decoder_out, inference_decoder_output\n",
     "\n",
     "\n",
     "\n",
@@ -621,11 +656,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tests Passed\n"
+     ]
+    }
+   ],
    "source": [
     "def seq2seq_model(input_data, target_data, keep_prob, batch_size,\n",
     "                  source_sequence_length, target_sequence_length,\n",
@@ -650,8 +693,17 @@
     "    :param target_vocab_to_int: Dictionary to go from the target words to an id\n",
     "    :return: Tuple of (Training BasicDecoderOutput, Inference BasicDecoderOutput)\n",
     "    \"\"\"\n",
-    "    # TODO: Implement Function\n",
-    "    return None, None\n",
+    "    enc_out, enc_state = encoding_layer(input_data, rnn_size, num_layers, keep_prob, source_sequence_length\n",
+    "                        , source_vocab_size, enc_embedding_size)\n",
+    "    dec_input = process_decoder_input(target_data, target_vocab_to_int, batch_size)\n",
+    "\n",
+    "    training_decoder_out, infer_decode_out = decoding_layer(dec_input\n",
+    "                                                            , enc_state, target_sequence_length\n",
+    "                                                            , max_target_sentence_length\n",
+    "                                                            , rnn_size, num_layers\n",
+    "                                                            , target_vocab_to_int, target_vocab_size\n",
+    "                                                            , batch_size, keep_prob, dec_embedding_size)\n",
+    "    return training_decoder_out, infer_decode_out\n",
     "\n",
     "\n",
     "\"\"\"\n",
@@ -681,28 +733,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "# Number of Epochs\n",
-    "epochs = None\n",
+    "epochs = 10\n",
     "# Batch Size\n",
-    "batch_size = None\n",
+    "batch_size = 64\n",
     "# RNN Size\n",
-    "rnn_size = None\n",
+    "rnn_size = 256\n",
     "# Number of Layers\n",
-    "num_layers = None\n",
+    "num_layers = 2\n",
     "# Embedding Size\n",
-    "encoding_embedding_size = None\n",
-    "decoding_embedding_size = None\n",
+    "encoding_embedding_size = 128\n",
+    "decoding_embedding_size = 128\n",
     "# Learning Rate\n",
-    "learning_rate = None\n",
+    "learning_rate = 0.001\n",
     "# Dropout Keep Probability\n",
-    "keep_probability = None\n",
-    "display_step = None"
+    "keep_probability = 0.8\n",
+    "display_step = 10"
    ]
   },
   {
@@ -715,7 +767,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {
     "collapsed": true
    },
@@ -781,7 +833,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {
     "collapsed": true
    },
@@ -831,12 +883,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {
-    "collapsed": true,
+    "collapsed": false,
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch   0 Batch   10/2154 - Train Accuracy: 0.2687, Validation Accuracy: 0.3352, Loss: 3.6663\n",
+      "Epoch   0 Batch   20/2154 - Train Accuracy: 0.3063, Validation Accuracy: 0.3523, Loss: 3.0914\n",
+      "Epoch   0 Batch   30/2154 - Train Accuracy: 0.3422, Validation Accuracy: 0.3864, Loss: 2.9133\n",
+      "Epoch   0 Batch   40/2154 - Train Accuracy: 0.2582, Validation Accuracy: 0.3224, Loss: 2.7845\n",
+      "Epoch   0 Batch   50/2154 - Train Accuracy: 0.3322, Validation Accuracy: 0.3864, Loss: 2.6786\n",
+      "Epoch   0 Batch   60/2154 - Train Accuracy: 0.2695, Validation Accuracy: 0.3345, Loss: 2.5443\n",
+      "Epoch   0 Batch   70/2154 - Train Accuracy: 0.2714, Validation Accuracy: 0.3253, Loss: 2.4608\n",
+      "Epoch   0 Batch   80/2154 - Train Accuracy: 0.2523, Validation Accuracy: 0.3246, Loss: 2.3128\n",
+      "Epoch   0 Batch   90/2154 - Train Accuracy: 0.2344, Validation Accuracy: 0.3132, Loss: 2.2904\n",
+      "Epoch   0 Batch  100/2154 - Train Accuracy: 0.2991, Validation Accuracy: 0.3175, Loss: 2.1751\n",
+      "Epoch   0 Batch  110/2154 - Train Accuracy: 0.2625, Validation Accuracy: 0.3168, Loss: 2.1981\n",
+      "Epoch   0 Batch  120/2154 - Train Accuracy: 0.2188, Validation Accuracy: 0.2905, Loss: 2.0654\n",
+      "Epoch   0 Batch  130/2154 - Train Accuracy: 0.1867, Validation Accuracy: 0.2386, Loss: 1.8508\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-36-8b554ffa681f>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     65\u001b[0m                      \u001b[0msource_sequence_length\u001b[0m\u001b[1;33m:\u001b[0m \u001b[0mvalid_sources_lengths\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m     66\u001b[0m                      \u001b[0mtarget_sequence_length\u001b[0m\u001b[1;33m:\u001b[0m \u001b[0mvalid_targets_lengths\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m---> 67\u001b[0;31m                      keep_prob: 1.0})\n\u001b[0m\u001b[1;32m     68\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m     69\u001b[0m                 \u001b[0mtrain_acc\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mget_accuracy\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtarget_batch\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mbatch_train_logits\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32mC:\\Users\\Yasser Makram\\AppData\\Local\\conda\\conda\\envs\\dlnd-tf-lab\\lib\\site-packages\\tensorflow\\python\\client\\session.py\u001b[0m in \u001b[0;36mrun\u001b[0;34m(self, fetches, feed_dict, options, run_metadata)\u001b[0m\n\u001b[1;32m    776\u001b[0m     \u001b[1;32mtry\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m    777\u001b[0m       result = self._run(None, fetches, feed_dict, options_ptr,\n\u001b[0;32m--> 778\u001b[0;31m                          run_metadata_ptr)\n\u001b[0m\u001b[1;32m    779\u001b[0m       \u001b[1;32mif\u001b[0m \u001b[0mrun_metadata\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m    780\u001b[0m         \u001b[0mproto_data\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mtf_session\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mTF_GetBuffer\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mrun_metadata_ptr\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32mC:\\Users\\Yasser Makram\\AppData\\Local\\conda\\conda\\envs\\dlnd-tf-lab\\lib\\site-packages\\tensorflow\\python\\client\\session.py\u001b[0m in \u001b[0;36m_run\u001b[0;34m(self, handle, fetches, feed_dict, options, run_metadata)\u001b[0m\n\u001b[1;32m    980\u001b[0m     \u001b[1;32mif\u001b[0m \u001b[0mfinal_fetches\u001b[0m \u001b[1;32mor\u001b[0m \u001b[0mfinal_targets\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m    981\u001b[0m       results = self._do_run(handle, final_targets, final_fetches,\n\u001b[0;32m--> 982\u001b[0;31m                              feed_dict_string, options, run_metadata)\n\u001b[0m\u001b[1;32m    983\u001b[0m     \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m    984\u001b[0m       \u001b[0mresults\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32mC:\\Users\\Yasser Makram\\AppData\\Local\\conda\\conda\\envs\\dlnd-tf-lab\\lib\\site-packages\\tensorflow\\python\\client\\session.py\u001b[0m in \u001b[0;36m_do_run\u001b[0;34m(self, handle, target_list, fetch_list, feed_dict, options, run_metadata)\u001b[0m\n\u001b[1;32m   1030\u001b[0m     \u001b[1;32mif\u001b[0m \u001b[0mhandle\u001b[0m \u001b[1;32mis\u001b[0m \u001b[1;32mNone\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m   1031\u001b[0m       return self._do_call(_run_fn, self._session, feed_dict, fetch_list,\n\u001b[0;32m-> 1032\u001b[0;31m                            target_list, options, run_metadata)\n\u001b[0m\u001b[1;32m   1033\u001b[0m     \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m   1034\u001b[0m       return self._do_call(_prun_fn, self._session, handle, feed_dict,\n",
+      "\u001b[0;32mC:\\Users\\Yasser Makram\\AppData\\Local\\conda\\conda\\envs\\dlnd-tf-lab\\lib\\site-packages\\tensorflow\\python\\client\\session.py\u001b[0m in \u001b[0;36m_do_call\u001b[0;34m(self, fn, *args)\u001b[0m\n\u001b[1;32m   1037\u001b[0m   \u001b[1;32mdef\u001b[0m \u001b[0m_do_call\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mfn\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m*\u001b[0m\u001b[0margs\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m   1038\u001b[0m     \u001b[1;32mtry\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1039\u001b[0;31m       \u001b[1;32mreturn\u001b[0m \u001b[0mfn\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m*\u001b[0m\u001b[0margs\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1040\u001b[0m     \u001b[1;32mexcept\u001b[0m \u001b[0merrors\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mOpError\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0me\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m   1041\u001b[0m       \u001b[0mmessage\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mcompat\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mas_text\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0me\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmessage\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32mC:\\Users\\Yasser Makram\\AppData\\Local\\conda\\conda\\envs\\dlnd-tf-lab\\lib\\site-packages\\tensorflow\\python\\client\\session.py\u001b[0m in \u001b[0;36m_run_fn\u001b[0;34m(session, feed_dict, fetch_list, target_list, options, run_metadata)\u001b[0m\n\u001b[1;32m   1019\u001b[0m         return tf_session.TF_Run(session, options,\n\u001b[1;32m   1020\u001b[0m                                  \u001b[0mfeed_dict\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mfetch_list\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mtarget_list\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1021\u001b[0;31m                                  status, run_metadata)\n\u001b[0m\u001b[1;32m   1022\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m   1023\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0m_prun_fn\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0msession\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mhandle\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mfeed_dict\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mfetch_list\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+     ]
+    }
+   ],
    "source": [
     "\"\"\"\n",
     "DON'T MODIFY ANYTHING IN THIS CELL\n",
