--- a/dcgan-svhn/DCGAN_Exercises.ipynb
+++ b/dcgan-svhn/DCGAN_Exercises.ipynb
@@ -274,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 22,
    "metadata": {
     "collapsed": true
    },
@@ -283,26 +283,26 @@
     "def generator(z, output_dim, reuse=False, alpha=0.2, training=True):\n",
     "    with tf.variable_scope('generator', reuse=reuse):\n",
     "        # First fully connected layer\n",
-    "        n_units = 4 * 4 * 1024 #input for first convolution, width:4, height:4, and depth: 1024\n",
-    "        x = tf.layers.dense(z, n_units)\n",
+    "        n_units = 4 * 4 * 512 #input for first convolution, width:4, height:4, and depth: 1024\n",
+    "        x1 = tf.layers.dense(z, n_units)\n",
     "        x1 = tf.reshape(x1, (-1, 4, 4, 512))\n",
     "        x1 = tf.layers.batch_normalization(x1, training=training)\n",
     "        x1 = tf.nn.relu(x1)\n",
     "\n",
     "        # fractionaly strided conv layer\n",
     "        # out 8*8*256\n",
-    "        x2 = tf.nn.conv2d_transpose(x1, 256, 5, strides=2, padding='same')\n",
+    "        x2 = tf.layers.conv2d_transpose(x1, 256, 5, strides=2, padding='same')\n",
     "        x2 = tf.layers.batch_normalization(x2, training=training)\n",
     "        x2 = tf.nn.relu(x2)\n",
     "\n",
     "        # fractionaly strided conv layer\n",
     "        # out 16*16*128\n",
-    "        x3 = tf.nn.conv2d_transpose(x2, 128, 5, strides=2, padding='same')\n",
+    "        x3 = tf.layers.conv2d_transpose(x2, 128, 5, strides=2, padding='same')\n",
     "        x3 = tf.layers.batch_normalization(x3, training=training)\n",
     "        x3 = tf.nn.relu(x3)\n",
     "        \n",
     "        # Output layer, 32x32x3\n",
-    "        logits = tf.nn.conv2d_transpose(x3, output_dim, 5, strides=2, padding='same')\n",
+    "        logits = tf.layers.conv2d_transpose(x3, output_dim, 5, strides=2, padding='same')\n",
     "        \n",
     "        out = tf.tanh(logits)\n",
     "        \n",
@@ -326,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {
     "collapsed": true
    },
@@ -335,10 +335,22 @@
     "def discriminator(x, reuse=False, alpha=0.2):\n",
     "    with tf.variable_scope('discriminator', reuse=reuse):\n",
     "        # Input layer is 32x32x3\n",
-    "        x = \n",
+    "\n",
+    "        #conv layer 1, out 16*16*64\n",
+    "        x1 = tf.layers.conv2d(x, 64, 5, strides=2, padding='same')\n",
+    "        x1 = tf.maximum(alpha*x1, x1)\n",
+    "\n",
+    "        #conv layer 2, out 8*8*128\n",
+    "        x2 = tf.layers.conv2d(x1, 128, 5, strides=2, padding='same')\n",
+    "        x2 = tf.maximum(alpha*x2, x2)\n",
+    "\n",
+    "        #conv layer 3 4*4*256\n",
+    "        x3 = tf.layers.conv2d(x2, 256, 5, strides=2, padding='same')\n",
+    "        x3 = tf.maximum(alpha*x2, x2)\n",
     "        \n",
-    "        logits = \n",
-    "        out = \n",
+    "        flat = tf.reshape(x3, (-1, 4*4*256))\n",
+    "        logits = tf.layers.dense(flat, 1)\n",
+    "        out = tf.sigmoid(logits)\n",
     "        \n",
     "        return out, logits"
    ]
@@ -354,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "collapsed": true
    },
@@ -395,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "collapsed": true
    },
@@ -434,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
     "collapsed": true
    },
@@ -461,7 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
     "collapsed": true
    },
@@ -489,7 +501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {
     "collapsed": true
    },
@@ -555,9 +567,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
