face GAN generator
three transpose conv layer with tanh output

--- a/face_generation/dlnd_face_generation.ipynb
+++ b/face_generation/dlnd_face_generation.ipynb
@@ -304,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -320,6 +320,7 @@
     }
    ],
    "source": [
+    "alpha = 0.2     # alpha for leaky relu\n",
     "def discriminator(images, reuse=False):\n",
     "    \"\"\"\n",
     "    Create the discriminator network\n",
@@ -327,7 +328,6 @@
     "    :param reuse: Boolean if the weights should be reused\n",
     "    :return: Tuple of (tensor output of the discriminator, tensor logits of the discriminator)\n",
     "    \"\"\"\n",
-    "    alpha = 0.2     # alpha for leaky relu\n",
     "    istraining = True   # flag for batch normalization\n",
     "\n",
     "    with tf.variable_scope(\"discriminator\", reuse=reuse):\n",
@@ -380,13 +380,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tests Passed\n"
+     ]
+    }
+   ],
    "source": [
     "def generator(z, out_channel_dim, is_train=True):\n",
     "    \"\"\"\n",
@@ -396,9 +404,34 @@
     "    :param is_train: Boolean if generator is being used for training\n",
     "    :return: The tensor output of the generator\n",
     "    \"\"\"\n",
-    "    # TODO: Implement Function\n",
+    "    with tf.variable_scope('generator', reuse=not is_train):\n",
+    "        # fully connected layer input\n",
+    "        # output 4*4*512\n",
+    "        x1 = tf.layers.dense(z, 4*4*512)\n",
+    "\n",
+    "        #reshape\n",
+    "        x1 = tf.reshape(x1, (-1, 4, 4, 512))\n",
+    "        # first transpose conv layer 5 kernel, 256 filters, strides 2\n",
+    "        # output 7*7*256\n",
+    "        # batch norm and leaky relu activation\n",
+    "        x2 = tf.layers.conv2d_transpose(x1, 256, 4, strides=1, padding='valid')\n",
+    "        x2 = tf.layers.batch_normalization(x2, training=is_train)\n",
+    "        x2 = tf.maximum(alpha*x2, x2)\n",
+    "\n",
+    "        # second transpose conv layer 5 kernel, 128 filters, strides 2\n",
+    "        # output 14*14*128\n",
+    "        # batch norm and leaky relu\n",
+    "        x3 = tf.layers.conv2d_transpose(x2, 128, 5, strides=2, padding='same')\n",
+    "        x3 = tf.layers.batch_normalization(x3, training=is_train)\n",
+    "        x3 = tf.maximum(alpha*x3, x3)\n",
+    "\n",
+    "        # output conv layer 5 kernel, 3 filters, strides 2\n",
+    "        # output 28*28*3\n",
+    "        # tanh out\n",
+    "        logits = tf.layers.conv2d_transpose(x3, out_channel_dim, 5, strides=2, padding='same')\n",
+    "        out = tf.tanh(logits)\n",
     "    \n",
-    "    return None\n",
+    "    return out\n",
     "\n",
     "\n",
     "\"\"\"\n",
